[gd_scene load_steps=10 format=2]

[ext_resource path="res://Project/Art/GFX/PNG/Tiles/tile_537.png" type="Texture" id=1]
[ext_resource path="res://Project/Script/Computer.gd" type="Script" id=2]
[ext_resource path="res://Project/Art/GFX/Interface/PNG/metalPanel_blue.png" type="Texture" id=3]
[ext_resource path="res://Project/Art/GFX/Interface/PNG/dotGreen.png" type="Texture" id=4]
[ext_resource path="res://Project/Art/GFX/Interface/PNG/glassPanel.png" type="Texture" id=5]
[ext_resource path="res://Project/Art/GFX/Interface/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Project/Art/GFX/PNG/Tiles/tile_519.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 28.5 )

[sub_resource type="DynamicFont" id=2]
size = 41
outline_size = 2
outline_color = Color( 0.827451, 0.796078, 0.796078, 1 )
font_data = ExtResource( 6 )

[node name="Computer" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 29, -0.5 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComputerPopup" type="Popup" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 480 )

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/ComputerPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ComputerPopup/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 115.0
margin_right = -20.0
margin_bottom = -20.0

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/ComputerPopup/NinePatchRect/CenterContainer"]
margin_left = 30.0
margin_top = 7.0
margin_right = 530.0
margin_bottom = 337.0
rect_min_size = Vector2( 500, 330 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="CanvasLayer/ComputerPopup/NinePatchRect/CenterContainer/NinePatchRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -33.0
margin_right = -7.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "teste"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ComputerPopup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -20.0
texture = ExtResource( 4 )
expand = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 32, 0 )
rotation = 1.5708
texture = ExtResource( 7 )

[connection signal="body_entered" from="Area2D" to="." method="_on_area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area2D_body_exited"]
